--- a/natya/dhruvam/templates/index.html
+++ b/natya/dhruvam/templates/index.html
@@ -16,6 +16,9 @@
 
 
 </head>
+
+
+
 <body>
     <div class="container text-center mb-5">
         <video muted disableRemotePlayback autoplay loop width="100%">
@@ -38,19 +41,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#" style="color: white;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/cnt">Contact</a>
+                            <a class="nav-link" href="/cnt" style="color: white;">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/guru_detail/{{request.user.id}}/">Guru</a>
+                            <a class="nav-link" href="/gurus/" style="color: white;">Guru</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/profile/">Profile</a>
+                            <a class="nav-link" href="/profile/" style="color: white;">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout/">Logout</a>
+                            <a class="nav-link" href="/programs" style="color: white;">Programs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout/" style="color: white;">Logout</a>
                         </li>
                      
                         {% elif request.session.ut == 1 %}   
@@ -58,18 +64,17 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="/about">About</a></li>
                             <li class="nav-item dropdown">
-                                <a class="btn btn-secondary dropdown-toggle" href="" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Views Users
+                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    View Users
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                  <li>
-                                    <a class="dropdown-item" href="{% url 'views_users' 0 %}">View Users</a>
-                                  </li>
-                                  <li>
-                                    <a class="dropdown-item" href="{% url 'views_users' 2 %}">View Gurus</a>
-                                  </li>
+                                    <li><a class="dropdown-item" href="{% url 'views_users' 0 %}">View Users</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'views_users' 2 %}">View Gurus</a></li>
                                 </ul>
-                              </li>
+                            </li>
+                            
+                            
+                            
                              
                             <li><a href="/approve_gurus">Approval</a></li>
                             <li><a href="/logout">Logout</a></li>
@@ -155,6 +160,8 @@
             </div>
         </div>
     </div>
+
+    
 
     <div class="about-section"  style="margin-top: 50px;">
 
@@ -298,6 +305,7 @@
 </div>
 
 
+
     
  
     
@@ -343,10 +351,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-w8fX0JdWrs/t5mWWqYtbAzvZwTHTSMMnm3plVk2mT6kY3Qw59mFKrcABtK2cvSzK" crossorigin="anonymous"></script>
 <script src="static/js/theme-change.js"></script>
+
 
 </body>
 </html>
