natya new project

--- a/natya/dhruvam/templates/Performances.html
+++ b/natya/dhruvam/templates/Performances.html
@@ -49,7 +49,7 @@
         <p class="text-gray-700">
             Padi Pattu songs are dedicated to Lord Ayyappa and performed in worship contexts like the Sabarimala pilgrimage. Dance sometimes accompanies these sacred songs to enhance the devotional atmosphere.
         </p>
-        <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/ktYJuhAWZ6Q')">View details</a>
+        <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/mHRDUxPyM6o')">View details</a>
     </div>
 </div>
 
@@ -61,7 +61,7 @@
         <p class="text-gray-700">
             A Padam highlights the emotional and dramatic essence of the dance, where the focus is on Abhinaya (expression), dealing with themes like love, longing, devotion, and divine relationships.
         </p>
-        <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/ktYJuhAWZ6Q')">View details</a>
+        <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/_7YxvbgOLuk')">View details</a>
     </div>
 </div>
 
