--- a/natya/dhruvam/templates/gita.html
+++ b/natya/dhruvam/templates/gita.html
@@ -9,6 +9,7 @@
             background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+
         }
         #carouselExample {
             height: 100vh;
@@ -23,15 +24,15 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
         .carousel-caption h5 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             font-weight: bold;
+            margin-bottom: 50px;
         }
-        .carousel-caption p {
-            font-size: 1.5rem;
-        }
+   
         .container {
             width: 90%;
             margin: 20px auto;
+
         }
         .card {
             background-color: white;
@@ -56,7 +57,7 @@
         }
         .card-content h3 {
             margin: 0;
-            font-size: 24px;
+            font-size: 20px;
         }
         .card-content p {
             margin: 10px 0;
@@ -71,6 +72,13 @@
             border-radius: 5px;
             font-size: 14px;
         }
+        .p{
+            margin-bottom: 100px;
+            margin-top: 50px;
+        
+        }
+        
+        
     </style>
 </head>
 <body>
@@ -81,8 +89,8 @@
             <div class="carousel-item active">
                 <img alt="Dancer performing Cholketu" class="d-block w-100" src="{% static 'images/g7.jpg' %}">
                 <div class="carousel-caption d-block">
-                    <h5>Bharatanatyam</h5>
-                    <p>A classical dance that captures the essence of elegance and tradition, rooted in ancient temple dances.</p>
+                    <h5 class="mt-5">Bharatanatyam</h5>
+                    <p  >A classical dance that captures the essence of elegance and tradition, rooted in ancient temple dances.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -96,14 +104,14 @@
                 <img alt="Dancer performing Kuchipudi" class="d-block w-100" src="{% static 'images/g8.jpg' %}">
                 <div class="carousel-caption d-block">
                     <h5>Kuchipudi</h5>
-                    <p>A vibrant dance form from Andhra Pradesh, blending fast rhythms and expressive storytelling.</p>
+                    <p class >A vibrant dance form from Andhra Pradesh, blending fast rhythms and expressive storytelling.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img alt="Dancer performing Odissi" class="d-block w-100" src="{% static 'images/g12.jpg' %}">
                 <div class="carousel-caption d-block">
                     <h5>Odissi</h5>
-                    <p>A classical dance known for its graceful, lyrical movements representing ancient temple art.</p>
+                    <p class >A classical dance known for its graceful, lyrical movements representing ancient temple art.</p>
                 </div>
             </div>
         </div>
@@ -120,7 +128,10 @@
     <!-- Additional Content Below Carousel -->
     <div class="container mt-5">
         <h5 class="text-center">GITA GOVINDAM</h5>
-        <p style="font-size: larger; text-align: justify;">The Gita Govinda has been studied and cherished across time...</p>
+        <p style="font-size: larger; text-align: justify;">
+            The Gita Govinda has been studied and cherished across time by Sanskrit scholars and enthusiasts but enjoyed only in fragments by the common people because artists and artistes have always tended to highlight and popularize only a few sections, based on their personal preferences. As a result, the complete masterpiece is a mystery, very few people have ever had access to.
+            This fascinating prospect of showcasing for the world the complete charm of a literary work was what brought together Guru Dr Pali Chandra and her team supported by Natyasutra - Invis team, transcending differences of language, time zone and country. The programme has been designed based on Natyasastra and Abhinaya Darpana so that the students of all dance forms can make use of this content in their respective forms.
+        </p>
     </div>
 
     <div class="container d-flex flex-wrap justify-content-center">
@@ -128,8 +139,8 @@
             <img alt="A group of people sitting on steps, one person in a red saree teaching others" src="{% static 'images/b4.jpg' %}">
             <div class="card-content">
                 <h3>All Modules</h3>
-                <p>Classes, Performance and Poem in Action...</p>
-                <a class="btn" href="#">View Details</a>
+                <p >Classes, Performance and Poem in Action...</p>
+                <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/dNOl4H8LaiI')">View details</a>
             </div>
         </div>
         <div class="card">
@@ -137,7 +148,7 @@
             <div class="card-content">
                 <h3>Performance</h3>
                 <p>Performance video is master dance presentation...</p>
-                <a class="btn" href="#">View Details</a>
+                <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/dNOl4H8LaiI')">View details</a>
             </div>
         </div>
         <div class="card">
@@ -145,29 +156,42 @@
             <div class="card-content">
                 <h3>Poem In Action</h3>
                 <p>The essence of Gita Govinda through abhinaya...</p>
-                <a class="btn" href="#">View Details</a>
+                <a class="text-pink-500 cursor-pointer" onclick="showModal('https://www.youtube.com/embed/dNOl4H8LaiI')">View details</a>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="video-card">
-                    <img alt="Guru Pali Chandra in a yellow saree" src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-RcpoXHkzChYnDbFAyeQ8tamr/user-ehrvabJ3DufsCu8YJ7PqY5gl/img-ieQlNiSixuXWqbIVwoXZYoyW.png">
-                    <div class="overlay">
-                        <h2>Guru Pali Chandra</h2>
-                        <p>Renowned dancer and choreographer</p>
-                        <span class="play-button">▶</span>
-                    </div>
+    <!-- Modal for YouTube Videos -->
+    <div id="modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Video Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-                <!-- Add more video cards here -->
+                <div class="modal-body">
+                    <iframe id="modal-iframe" width="100%" height="400" frameborder="0" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
+
+    <script>
+        function showModal(url) {
+            document.getElementById('modal-iframe').src = url;
+            $('#modal').modal('show');
+        }
+
+        function hideModal() {
+            document.getElementById('modal-iframe').src = '';
+            $('#modal').modal('hide');
+        }
+    </script>
 
     <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
