--- a/natya/dhruvam/templates/gurureg.html
+++ b/natya/dhruvam/templates/gurureg.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #d9a7c7, #fffcdc);
+            background: linear-gradient(to bottom, #161a7d, #000000);
             height: 100vh;
             display: flex;
             justify-content: center;
