--- a/natya/dhruvam/templates/kathak.html
+++ b/natya/dhruvam/templates/kathak.html
@@ -125,7 +125,7 @@ p{
                     <p>NatyaSutra is an attempt to permanently preserve the rich art and cultural heritage of India. Our dream is to provide 24/7 online access to personalized lectures, tutorials, classes, and performances of all Indian art and culture.</p>
                 </center>
                     <div class="card border-transparent" style="margin-left: 50px; width: 500px; height: 500px; border-radius: 10%;">
-                        <img src="{% static 'images/sundara-syama.jpg' %}" style=" height: 600px; width: 500px; border-radius: 10%;" alt="Two dancers performing a classical South Indian dance, one male and one female, in traditional attire" class="card-img">
+                        <img src="{% static 'images/ka4.jpg' %}" style=" height: 600px; width: 500px; border-radius: 10%;" alt="Two dancers performing a classical South Indian dance, one male and one female, in traditional attire" class="card-img">
                         <div class="card-text">
                             <center><a href="{% url 'class_detail' 3 %}">
                                 <button class="bg-white text-pink-500 font-semibold py-2 px-4 border border-pink-500 rounded hover:bg-pink-500 hover:text-white">
